Fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ html, body {
 
 .subname {
   font-size: 1.1em;
-  margin-bottom: 5px;
+  margin-bottom: 6px;
   text-align: center;
   letter-spacing: 2.5px;
   opacity: 0.6;
